23/10 - Fifth corrections from Ed

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -29,8 +29,7 @@ interferometer signal can be achieved. Temperatures well below that of
 the Doppler limit (\sivalue{146}{\micro\kelvin} for \ac{rb87}) can be
 reached using polarisation gradient cooling~\cite{Salomon1990}. In what follows, the principles of
 sub-Doppler cooling using polarisation gradients will not be discussed
-in detail. Further details can be found
-elsewhere~\cite{Dalibard1989,Berg-Sorensent1992}. 
+in detail, but can be found elsewhere~\cite{Dalibard1989,Berg-Sorensent1992}. 
 
 \par\noindent
 This section describes the work towards to cooling and launching the
@@ -79,24 +78,24 @@ of the output \ac{aom} on the \Muquans laser was calibrated so that we
 could apply a voltage ramp that gives an approximately linear
 intensity ramp.
 \begin{figure}[!htbp]
-    \centering
-    \fontsize{14pt}{14pt}
-    \resizebox{0.7\textwidth}{!}{\input{molasses_timing.pdf_tex}}
-    \caption[Molasses stage timing diagram]{Timing diagram for the
+  \centering
+  \fontsize{14pt}{14pt}
+  \resizebox{0.7\textwidth}{!}{\input{molasses_timing.pdf_tex}}
+  \caption[Molasses stage timing diagram]{Timing diagram for the
     molasses stage of the experiment. After a time \(\tau_\text{a} =
-  \sivalue{100}{\milli\second}\), the atoms are released from the
-\ac{mot}. The molasses sequence begins \sivalue{3}{\milli\second}
-later, once the magnetic field from the \ac{mot} coils has decayed
-away. First, the frequency of the cooling light is ramped to \(-25
-\Gamma\) over \sivalue{1.4}{\milli\second}. The relative frequencies
-of counter-propagating \ac{mot} beams are detuned so that the atoms
-are cooled in a moving frame, launching them along a parabolic path
-(see~\SectionRef{subsec:moving_molasses}). Next, the intensity of the
-\ac{mot} light is reduced linearly over \sivalue{5}{\milli\second}. To
-measure the temperature, the atoms are left to expand for a duration
-of \(\tau_\text{exp}\) \sivalue{}{\milli\second}, after which they are
-imaged using the camera.}
-    \label{fig:molasses_timing}
+    \sivalue{100}{\milli\second}\), the atoms are released from the
+    \ac{mot}. The molasses sequence begins \sivalue{3}{\milli\second}
+    later, once the magnetic field from the \ac{mot} coils has decayed
+    away. First, the frequency of the cooling light is ramped to \(-25
+    \Gamma\) over \sivalue{1.4}{\milli\second}. The relative frequencies
+    of counter-propagating \ac{mot} beams are detuned so that the atoms
+    are cooled in a moving frame, launching them along a parabolic path
+    (see~\SectionRef{subsec:moving_molasses}). Next, the intensity of the
+    \ac{mot} light is reduced linearly over \sivalue{5}{\milli\second}. To
+    measure the temperature, the atoms are left to expand for a duration
+    of \(\tau_\text{exp}\) \sivalue{}{\milli\second}, after which they are
+  imaged using the camera.}
+  \label{fig:molasses_timing}
 \end{figure}
 \subsection{Launching in a Moving Molasses}\label{subsec:moving_molasses}
 
@@ -117,20 +116,20 @@ the atoms will be along the Raman axis. If the detuning of both pairs
 of beams is the same, then the velocity along the Raman axis is given
 by \(\vec{v_r} = \sqrt{2} \delta f_l \lambda\)~\cite{Ohshima1995}.
 \begin{figure}[!htbp]
-    \centering
-    \def\svgwidth{0.6\textwidth}\input{moving_molasses.pdf_tex}
-    %\resizebox{0.6\textwidth}{!}{\input{moving_molasses.pdf_tex}}
-    \caption[Beam configuration for a moving molasses]{Beam
+  \centering
+  \def\svgwidth{0.6\textwidth}\input{moving_molasses.pdf_tex}
+  %\resizebox{0.6\textwidth}{!}{\input{moving_molasses.pdf_tex}}
+  \caption[Beam configuration for a moving molasses]{Beam
     configuration for a moving molasses. When counter-propagating
-  beams are detuned from each other, the atoms are cooled into a
-  moving frame where the Doppler shift brings both beams to the same
-  frequency. Along the vertical
-axis, the beams are detuned by \(\delta f_v\) so that the cloud is
-launched upwards with a velocity \(v_z = \delta f_v \lambda\). In the
-horizontal plane, the \(\vec{x}\) and \(\vec{y}\) beams are detuned by
-\(\delta f_h\) so that the resultant velocity is along the Raman axis
-\(v_r = \sqrt{2}\delta f_h\lambda\). }
-    \label{fig:moving_molasses}
+    beams are detuned from each other, the atoms are cooled into a
+    moving frame where the Doppler shift brings both beams to the same
+    frequency. Along the vertical
+    axis, the beams are detuned by \(\delta f_v\) so that the cloud is
+    launched upwards with a velocity \(v_z = \delta f_v \lambda\). In the
+    horizontal plane, the \(\vec{x}\) and \(\vec{y}\) beams are detuned by
+    \(\delta f_h\) so that the resultant velocity is along the Raman axis
+  \(v_r = \sqrt{2}\delta f_h\lambda\). }
+  \label{fig:moving_molasses}
 \end{figure}
 \par\noindent
 As well as launching the atoms horizontally, the atoms are launched
@@ -158,10 +157,10 @@ shown in~\FigureRef{fig:molasses_launch}, in which the cloud was imaged
 up to \sivalue{76}{\milli\second} after being released from the trap.
 
 \begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{molasses_launch}
-    \caption[Atom cloud position after launching in a moving molasses]{A series of images showing the trajectory of the atom cloud after being cooled in a moving molasses. The first image was taken \sivalue{7}{\milli\second} after initiating the molasses and a subsequent one every \sivalue{5}{\milli\second}. Each image represents a region of interest of dimensions 1150 \(\times\) 1650 pixels that covers the spatial extent of the atom cloud during the launch.}
-    \label{fig:molasses_launch}
+  \centering
+  \includegraphics[width=0.8\textwidth]{molasses_launch}
+  \caption[Atom cloud position after launching in a moving molasses]{A series of images showing the trajectory of the atom cloud after being cooled in a moving molasses. The first image was taken \sivalue{7}{\milli\second} after initiating the molasses and a subsequent one every \sivalue{5}{\milli\second}. Each image represents a region of interest of dimensions 1150 \(\times\) 1650 pixels that covers the spatial extent of the atom cloud during the launch.}
+  \label{fig:molasses_launch}
 \end{figure}
 \subsubsection{Measuring the Temperature}
 In thermal equilibrium, the velocity distribution of the atoms is
@@ -180,8 +179,8 @@ component along one direction has the distribution
 %As~\EquationRef{eq:mb3D} is a product of velocity distributions along
 %each axis, the velocity distribution along one axis is 
 \begin{equation}
-    f(v_x) = \left(\frac{m}{2\pi k_B T}\right)^{1/2}e^{-\frac{m (v_x-\langle v_x \rangle) ^2}{2 k_B T}}
-    \label{eq:mb1D}
+  f(v_x) = \left(\frac{m}{2\pi k_B T}\right)^{1/2}e^{-\frac{m (v_x-\langle v_x \rangle) ^2}{2 k_B T}}
+  \label{eq:mb1D}
 \end{equation}
 %Suppose that there are initially \(n_0 (x) \mathrm{d}x\) atoms within
 %the region \((x, x+\mathrm{d}x)\), where \(n_0(x) = n(x, t=t_0)\) is
@@ -195,15 +194,15 @@ and a mean square radius projected along $x$ of $\sigma_0^2$, the
 number density (projected along $x$)
 at later times is given by a convolution with~\EquationRef{eq:mb1D}
 \begin{equation}
-        n(x,t) = \int n_0(x_0) \left(\frac{m}{2\pi k_B}\right)^{1/2} e^{-\frac{m (v_x-\langle v_x \rangle)^2}{2 k_B T}} e^{-\frac{(x+v_x t - x_0)^2}{2\sigma_0^2}} \mathrm{d}v_x
-        \label{eq:density_time}
+  n(x,t) = \int n_0(x_0) \left(\frac{m}{2\pi k_B}\right)^{1/2} e^{-\frac{m (v_x-\langle v_x \rangle)^2}{2 k_B T}} e^{-\frac{(x+v_x t - x_0)^2}{2\sigma_0^2}} \mathrm{d}v_x
+  \label{eq:density_time}
 \end{equation}
 where \(\sigma_0\) is the \(1/e^2\) initial width of the cloud. As a
 convolution of two Gaussians, \EquationRef{eq:density_time} is also a
-Gaussian, with a \(1/e^2\) width given by
+Gaussian, with a mean-square radius (projected along $x$) given by
 \begin{equation}
-    \sigma(t)^2 = \sigma_0^2 + \frac{k_B T}{m} t^2
-    \label{eq:expansion_width}
+  \sigma(t)^2 = \sigma_0^2 + \frac{k_B T}{m} t^2
+  \label{eq:expansion_width}
 \end{equation}
 \par\noindent
 \FigureRef{fig:molasses_fit_examp} shows a typical density
@@ -225,23 +224,23 @@ camera as \(T_x = \sivalue{6.38 \pm 0.11}{\micro\kelvin}\) and \(T_y =
   \centering
   \includegraphics[width=0.8\linewidth]{molasses_fit_examp.pdf}
   \caption[Integrated pixel counts during ballistic expansion.]{Integrated pixel count for a single image during ballistic
-  expansion. The dashed lines indicate non-linear least squares fits
-to a Gaussian function.}
+    expansion. The dashed lines indicate non-linear least squares fits
+  to a Gaussian function.}
   \label{fig:molasses_fit_examp}
 \end{figure}
 \begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{temperature_launch}
-    \caption[Temperature measurement using ballistic expansion]{Mean
-      squared cloud radius plotted against the square of the ballistic
-      expansion time. After
-  molasses, the cloud is left to expand in the dark and in a region of
-  close to zero magnetic field. Least-squares fits to the camera
-  images give the mean-square radii $\sigma(t)^2$ in the horizontal
-  (blue) and vertical (orange) directions. 
-The gradient of these curves gives temperatures \(T_x = \sivalue{6.38 \pm0.11}{\micro\kelvin}\) and \(T_y =
-\sivalue{6.38\pm0.09}{\micro\kelvin}\).}
-    \label{fig:molasses_temperature}
+  \centering
+  \includegraphics[width=0.8\textwidth]{temperature_launch}
+  \caption[Temperature measurement using ballistic expansion]{Mean
+    squared cloud radius plotted against the square of the ballistic
+    expansion time. After
+    molasses, the cloud is left to expand in the dark and in a region of
+    close to zero magnetic field. Least-squares fits to the camera
+    images give the mean-square radii $\sigma(t)^2$ in the horizontal
+    (blue) and vertical (orange) directions. 
+    The gradient of these curves gives temperatures \(T_x = \sivalue{6.38 \pm0.11}{\micro\kelvin}\) and \(T_y =
+  \sivalue{6.38\pm0.09}{\micro\kelvin}\).}
+  \label{fig:molasses_temperature}
 \end{figure}
 
 \subsubsection{Measuring the Launch Trajectory}
@@ -252,8 +251,8 @@ is in free-fall, the trajectory for the centre-of-mass is then given
 by the well-known equation-of-motion for a particle moving under
 constant acceleration
 \begin{equation}
-    \langle x(t) \rangle = \langle x(0) \rangle + v_x t + \frac{1}{2} a_x t^2
-    \label{eq:position_free}
+  \langle x(t) \rangle = \langle x(0) \rangle + v_x t + \frac{1}{2} a_x t^2
+  \label{eq:position_free}
 \end{equation}
 where \(v_i\) is the initial velocity along the given axis and \(a_i\)
 is the acceleration.
@@ -274,20 +273,20 @@ of \(v_v = \sivalue{25.0\pm0.24}{\centi\meter\per\second}\) and \(a_v
 \sivalue{-0.32\pm0.036}{\metre\per\second\squared}\) along the
 horizontal axis. 
 \begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=0.8\textwidth]{molasses_position}
-    \caption[Atom cloud centre-of-mass over time]{Measured
+  \centering
+  \includegraphics[width=0.8\textwidth]{molasses_position}
+  \caption[Atom cloud centre-of-mass over time]{Measured
     centre-of-mass position over time. The horizontal component of the
-  position is shown in blue and the vertical in orange. Each
-trajectory is fit to~\EquationRef{eq:position_free} to estimate the
-launch velocity. The best-fit values are \(v_v =
-\sivalue{25.0\pm0.24}{\centi\meter\per\second}\) and \(a_v =
-\sivalue{-9.40\pm0.051}{\metre\per\second\squared}\) along the
-vertical axis and \(v_h =
-\sivalue{7.39\pm0.14}{\centi\meter\per\second}\) and \(a_h =
-\sivalue{-0.31\pm0.036}{\metre\per\second\squared}\) along the
-horizontal.}
-    \label{fig:molasses_position}
+    position is shown in blue and the vertical in orange. Each
+    trajectory is fit to~\EquationRef{eq:position_free} to estimate the
+    launch velocity. The best-fit values are \(v_v =
+    \sivalue{25.0\pm0.24}{\centi\meter\per\second}\) and \(a_v =
+    \sivalue{-9.40\pm0.051}{\metre\per\second\squared}\) along the
+    vertical axis and \(v_h =
+    \sivalue{7.39\pm0.14}{\centi\meter\per\second}\) and \(a_h =
+    \sivalue{-0.31\pm0.036}{\metre\per\second\squared}\) along the
+  horizontal.}
+  \label{fig:molasses_position}
 \end{figure}
 \par\noindent
 When compared to the expected velocities from the detunings,
@@ -321,24 +320,18 @@ and then it will be necessary to return to this issue.
 
 \section{State Preparation}\label{sec:state_prep}
 After the atoms have been cooled in an optical molasses, the
-population will mostly be distributed across the \(\ket{F=2}\) level,
-along with a small fraction distributed across the \(\ket{F=1}\)
-level. The Raman transition only couples the \(\ket{1,0}\) and
+population will mostly be distributed across the \(\ket{F=2,m_F}\)
+sublevels,
+along with a small fraction distributed across the \(\ket{F=1,m_F}\)
+sublevels. The Raman transition only couples the \(\ket{1,0}\) and
 \(\ket{2,0}\) states, so atoms in the other hyperfine ground states
 cannot participate in the interferometer. In fact, since the
 individual Zeeman sub-levels are not resolved during detection, these
-background atoms result in a loss of fringe visibility. One way to
-overcome this is to apply a pulse of light resonant with the
-\trans{2}{3} transition to push the non-participating atoms out of the
-interferometer detection region. Of course, this must be done after
-applying a Raman pulse to transfer an ensemble of atoms from
-\(\ket{2,0}\) into \(\ket{1,0}\). In this simple scheme a large
-fraction of the atoms are removed, which is undesirable since
-measurements of a low number of atoms are inherently more uncertain
-due to shot number fluctuations. 
+background atoms result in a loss of fringe visibility.  
 \par\noindent
 The following section discusses a method of preparing the atoms to
-increase the population in the \(\ket{1,0}\) ground state. An overview
+increase the population in the \(\ket{1,0}\) ground state and minimise
+the population in all other states. An overview
 of the scheme is given in~\SectionRef{subsec:prep_schemes}. This is
 followed by a discussion of the initial steps which optically pump
 atoms into the \(\ket{1,0}\) state
@@ -353,10 +346,13 @@ in more detail later, in~\SectionRef{subsec:vel_select}.
 The scheme used to prepare atoms in the \(\ket{1,0}\) state is the
 following:
 \begin{enumerate}
-    \item Light resonant with the \trans{2}{2} transition pumps atoms into the \(\ket{F=1}\) level
+    \item Light resonant with the \trans{2}{2} transition pumps all
+      the $\ket{F=2}$ atoms
+      into the \(\ket{F=1}\) level.
     \item Light resonant with the \trans{1}{0} transition drives (\(\sigma^{\pm}\)) transitions to pump atoms into the \(\ket{1,0}\) dark state
-    \item A microwave $\pi$-pulse transfers atoms to \(\ket{2,0}\)
-    \item A Raman $\pi$-pulse transfers atoms with a narrow velocity spread back to \(\ket{1,0}\)
+    \item A microwave $\pi$-pulse transfers those atoms to \(\ket{2,0}\)
+    \item A long Raman $\pi$-pulse selects a narrow velocity group of
+      atoms in $\ket{2,0}$ and transfers them back to $\ket{1,0}$.
     \item The atoms which remain in \(\ket{F=2}\) are blown away
 \end{enumerate}
 A diagram of the population of each hyperfine ground state and the
@@ -365,11 +361,7 @@ in~\FigureRef{fig:state_prep}. With the exception of step 4, the light
 is provided by the \Muquans laser using the \ac{mot} collimators
 aligned to the vertical \(\vec{z}\) axis. The frequency of the cooling
 laser and the repump sideband are set so that the relevant transitions
-for steps 1 and 2 are addressed. As the \(\ket{F=1}\) light is a
-sideband of the \(\ket{F=2}\) light, it is not possible to blow away
-atoms in \(\ket{F=1}\) without also blowing away atoms in
-\(\ket{F=2}\). This problem is overcome by using microwave pulses to
-drive atoms up to \(\ket{F=2}\) before velocity selection.
+for steps 1 and 2 are addressed. 
 \par\noindent
 A timing diagram of the state preparation sequence is shown
 in~\FigureRef{fig:state_selection_timing}, which indicates the
@@ -380,9 +372,14 @@ diagram) to preserve the spin state of each atom.
 \begin{figure}[!htbp]
     \centering
     %\def\svgwidth{0.8\textwidth}
-    \fontsize{24pt}{24pt}
+    \fontsize{32pt}{32pt}
     \resizebox{0.8\textwidth}{!}{\input{state_selection.pdf_tex}}
-    \caption[State preparation pulse sequence]{Sequence of optical and microwave pulses used to prepare an ensemble of atoms in \(\ket{1,0}\). The red arrows indicate optical transitions to and from \(\ket{F=2}\) and equivalently for the blue arrows and \(\ket{F=1}\). A residual population in the \(\ket{1,\pm 1}\) states is present, which contributes to a background during the interferometer.}
+    \caption[State preparation pulse sequence]{Sequence of optical and
+    microwave pulses used to prepare an ensemble of velocity-selected
+  atoms in \(\ket{1,0}\). The red arrows indicate optical transitions
+to and from \(\ket{F=2}\) and equivalently for the blue arrows and
+\(\ket{F=1}\). A residual population is left in the \(\ket{1,\pm 1}\)
+states, which contributes a background to the interferometer fringes.}
     \label{fig:state_prep}
 \end{figure}
 \begin{figure}[!htbp]
@@ -401,7 +398,7 @@ off-resonantly excite an atom to the \(\ket{F'=2}\) excited level, but
 the small scattering rate means that on average, an atom will need to
 scatter many photons before it is pumped into the \(\ket{F=1}\) level.
 Therefore, to minimise the heating during this pumping process, the
-frequency of the cooling light is resonant with the \trans{2}{2}
+frequency of the cooling light is shifted to be resonant with the \trans{2}{2}
 transition.
 \par\noindent
 \FigureRef{fig:step1_pumping} shows the population in the two
@@ -427,10 +424,10 @@ Zeeman sub-levels in \(\ket{F=1}\). The next pulse of light is used to
 increase the population in \(\ket{1,0}\) by driving \trans{1}{0}
 transitions. During this time, the \trans{2}{2} light remains on which
 helps to prevent atoms from populating the \(\ket{F=2}\) level through
-off-resonant \trans{1}{1} excitations. The magnetic field present
-means that the circularly-polarised \(\vec{z}\) \ac{mot} beams only
-drive \(\sigma^{\pm}\) transitions, so the \(\ket{1,0}\) state is in
-principle a dark state. 
+off-resonant \trans{1}{1} excitations. The magnetic field is directed
+along $\vec{z}$ so that the circularly-polarised \(\vec{z}\) \ac{mot} beams only
+drive \(\sigma^{\pm}\) transitions. This makes the \(\ket{1,0}\) state
+a dark state into which all the atoms should be optically pumped. 
 \par\noindent
 The distribution of atoms across the Zeeman sublevels was measured
 using a microwave pulse to drive atoms into the \(\ket{F=2}\) level,
@@ -439,12 +436,14 @@ microwave transition, the frequency of the microwave field was varied
 to find the resonant frequency. The resulting spectra for \(m_F = -1\)
 and \(m_F = 0\) are shown in~\FigureRef{fig:step2_microwave_spec},
 both with and without applying light to pump into the \(\ket{1,0}\)
-state.  The 0 \(\rightarrow\) 0 clock transition is detuned from the
-hyperfine splitting frequency due to the applied magnetic field,
-giving a second-order Zeeman shift of
-\sivalue{515}{\hertz\per\gauss\squared}. The measured shift of
+state. From~\FigureRef{fig:step2_mf1}, the first-order
+Zeeman shift (\sivalue{1.4}{\MHz\per\gauss}) of the $m_F = -1$ state is \sivalue{-4.435}{\MHz}, which gives a
+field strength of \sivalue{3.17}{\gauss}. This is in close agreement
+with the value measured from the second-order shift of the 0
+\(\rightarrow\) 0 clock transition. The second-order shift of
+\sivalue{575.15}{\hert\per\gauss\squared} and the measured shift of
 \sivalue{5.6}{\kilo\hertz} corresponds to a field strength of
-\sivalue{3.3}{\gauss}.
+\sivalue{3.12}{\gauss}. 
 \begin{figure}[!htbp]
     \centering
     \def\svgwidth{\columnwidth}
@@ -462,7 +461,17 @@ population from the \(m_F = \pm 1\) sub-levels. After pumping for
 remains in the \(m_F = \pm 1\) sub-levels. The \(\ket{1,0}\) state can
 only be excited to \(\ket{F'=0}\) by \(\pi\)-polarised light, which
 suggests that the magnetic field is mis-aligned with the \(\vec{z}\)
-\ac{mot} beams. The effect of these background atoms on the measured
+\ac{mot} beams. If the spherical components $(\sigma^-,\pi,\sigma^+)$
+of the dipole operator have values
+$(\sqrt{(1-\epsilon^2)/2},\epsilon,
+\sqrt{(1-\epsilon^2)/2})$, a value of $\epsilon$ = 0.085 is consistent
+with a residual $m_F = \pm 1$ population of 5\%. For circularly
+polarised light, a $\pi$-component of this magnitude can be caused by
+a mis-alignment of the magnetic field from the $\vec{z}$ axis of
+$2.4^\circ$. The coils used to generate a magnetic field along the
+$\vec{z}$ axis are not in Helmholtz configuration, so it is plausible
+that an inhomogeneous magnetic field is the cause of the
+mis-alignment. The effect of these background atoms on the measured
 interferometer signal is discussed later,
 in~\SectionRef{subsec:phase_measurement}.
 \begin{figure}[!htbp]
@@ -471,17 +480,11 @@ in~\SectionRef{subsec:phase_measurement}.
     \caption[\(\ket{1,m_F}\) populations for increasing \trans{1}{0} pumping time.]{Population in each Zeeman sub-level as the \trans{1}{0} pumping time is increased. The \(m_F = 0, -1, +1\) populations are shown in blue, orange and green, respectively. After \sivalue{30}{\micro\second}, approximately 5\% of the population remains in the \(m_F = \pm 1\) sub-levels.}
     \label{fig:step2_pumping}
 \end{figure}
-\subsection{Including Microwave Transitions}\label{subsec:microwaves}
-Without a dedicated laser to drive transitions from the \(\ket{F=1}\)
-level, it was necessary to implement a scheme to use light resonant
-with the \(\ket{F=2}\) level to remove background atoms. Therefore, we
-included a system for driving microwave frequency transitions from
-\(\ket{1,0}\) to \(\ket{2,0}\).
+\subsection{The Microwave Transitions}\label{subsec:microwaves}
 \subsubsection{Microwave Generation}
-A diagram of the setup for this is shown
+A diagram of the microwave setup is shown
 in~\FigureRef{fig:microwave_setup}. The microwave radiation is
-generated using a \textit{Wind-Freak} synthesiser to output a
-microwave field oscillating at a frequency close to the hyperfine
+generated using a \textit{Wind-Freak} synthesiser oscillating at a frequency close to the hyperfine
 splitting frequency, \(f_\text{hfs} =
 \sivalue{6.83846}{\giga\hertz}\). This is amplified by
 \textit{MiniCircuits MCL ZRON-8G+} amplifier and directed into the
@@ -497,46 +500,64 @@ frequency, which led to a significant shot-to-shot fluctuation in the
 \begin{figure}[!htbp]
     \centering
     \resizebox{0.5\textwidth}{!}{\input{microwave_setup.pdf_tex}}
-    \caption[Setup for Microwaves]{Schematic diagram of the microwave assembly. The frequency close to the hyperfine splitting frequency is generated by a \textit{Wind-Freak} synthesiser. A \sivalue{100}{\mega\hertz} clock signal acts as a stable reference frequency for the synthesiser. The generated microwave power is amplified twice, first by a low-power \textit{Mini-Circuits} amplifier, then by a microwave horn, which produces a highly directional, linearly polarised wave. The output is controlled by a digital signal, both at the synthesiser and at a bi-directional microwave switch. The second port of this is blocked with a \sivalue{50}{\ohm} terminator to prevent reflections. }
+    \caption[Setup for Microwaves]{Schematic diagram of the microwave
+    assembly. The frequency close to the hyperfine splitting frequency
+  is generated by a \textit{Wind-Freak} synthesiser. A
+\sivalue{100}{\mega\hertz} clock signal acts as a stable reference
+frequency for the synthesiser. The generated microwave power is
+amplified by a low-power \textit{Mini-Circuits}
+amplifier, before the microwave horn produces a highly
+directional, linearly polarised wave. The output is switched on and
+off using one 
+digital signal at both the synthesiser and at a bi-directional
+microwave switch. The second port of this is terminated to prevent reflections. A USB connection 
+to the synthesiser is used to control both its power and frequency.}
     \label{fig:microwave_setup}
 \end{figure}
 \subsubsection{Pulse Characterisation}
+\FigureRef{fig:microwave_spectrum} shows a spectrum obtained by
+varying the frequency of the microwave pulse. This spectrum was
+measured with an applied magnetic field along the $\vec{z}$ axis of
+\sivalue{0.67}{\gauss} and shows the presence
+of \(\Delta m = 0, +1 \) and $-1$ transitions from \(\ket{1,0}\). It
+can also be seen that the population in \(\ket{1,m_F=\pm 1}\) decreases after
+the \trans{1}{0} pumping step is applied. The linewidth of the
+microwave transition is much narrower than the Zeeman splitting, so
+only the clock transition is driven when a pulse with a frequency
+close to \(f_\text{hfs}\) is applied. 
+\par\noindent
 \FigureRef{fig:mw_rabi} shows a measurement of the population in the
-\(\ket{F=2}\) level for increasing durations duration of the applied
+\(\ket{F=2}\) level for increasing durations of the applied
 microwave pulse. Rabi oscillations between the \(\ket{1,0}\) and
 \(\ket{2,0}\) states are clearly present. The loss of coherence
 between the states can be explained by an inhomogeneous driving field.
 Once inside the chamber, the microwaves reflect and scatter off the
 interior surfaces which results in a spatially-dependent Rabi
-frequency. This also leads to a depolarisation of the field, as
-\(\sigma^{\pm}\) transitions were also observed. Initially, around
-\(85\%\) of the population was driven into \(\ket{F=2}\) using a
+frequency. \par\noindent
+A further cause of inhomogeneity is a mis-alignment of the microwave
+field to the magnetic field. Referring
+to~\FigureRef{fig:mw_spectrum_trans}, the
+$\ket{1,m}\rightarrow\ket{2,m-1}$
+transitions have the same transition frequency as
+$\ket{1,m-1}\rightarrow\ket{2,m}$
+transitions. These are the transitions labelled $\textbf{(b)}$ and
+$\textbf{(d)}$ in~\FigureRef{fig:microwave_spectrum}. 
+The fact that $\sigma^{\pm}$ transitions were observed means
+that the microwave field was not parallel with the magnetic field.
+Initially, around 
+\(85\%\) of the $\ket{F=1}$ population was driven into \(\ket{F=2}\) using a
 microwave pulse of \sivalue{100}{\micro\second}. After improving the
 alignment of the magnetic field during the microwave pulse, this
 fraction increased to \(97\%\) - the remaining 3\% being distributed
-across the \(m_F = \pm 1\) states.
-
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=0.7\textwidth]{mw_rabi}
-    \caption[Microwave Rabi oscillation between \(\ket{1,0}\) and \(\ket{2,0}\)]{Damped Rabi oscillation between \(\ket{1,0}\) and \(\ket{2,0}\) using a microwave pulse of varying length. At longer pulse times, there is a loss of coherence due to a dephasing between the two states. The red dashed line is an envelope is a fit to a decaying exponential with a characteristic time of \(\tau = \sivalue{1016}{\micro\second}\).}
-    \label{fig:mw_rabi}
-\end{figure}
-\par\noindent
-\FigureRef{fig:microwave_spectrum} shows a spectrum obtained by
-varying the frequency of the microwave pulse. This shows the presence
-of \(\Delta m = \pm 1 \) transitions from \(\ket{1,0}\), as well as
-the fact that the population in \(\ket{1,m_F=\pm 1}\) decreases after
-the \trans{1}{0} pumping step is applied. The linewidth of the
-microwave transition is much narrower than the Zeeman splitting, so
-only the clock transition is driven when a pulse with a frequency
-close to \(f_\text{hfs}\) is applied.
+across the \(m_F = \pm 1\) states. The strength of the $\sigma^{\pm}$
+transitions was also reduced, so that a larger fraction of the
+$\ket{1,0}$ population is driven into $\ket{2,0}$. 
 \begin{figure}[!htbp]
     \centering
     \def\svgwidth{\columnwidth}
     \fontsize{14pt}{14pt}
     \subfloat[][]{\scalebox{0.5}{\input{microwave_spectrum.pdf_tex}}\label{fig:microwave_spectrum}}
-    \subfloat[][]{\scalebox{0.5}{\raisebox{4ex}{\input{microwave_transitions.pdf_tex}}}}
+    \subfloat[][]{\scalebox{0.5}{\raisebox{4ex}{\input{microwave_transitions.pdf_tex}}}\label{fig:mw_spectrum_trans}}
     \caption[Microwave transition spectrum]{\textbf{(a)} shows the
       microwave transition spectrum before (blue) and after (orange)
     \trans{1}{0} pumping. \textbf{(b)} shows the transitions addressed
@@ -545,6 +566,12 @@ close to \(f_\text{hfs}\) is applied.
 0\). In order of increasing frequency, the transitions in \textbf{(a)} are highlighted in: a) red, b) blue, c) green, d) orange and e) purple.} 
     \label{fig:microwave_data}'
 \end{figure}
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.7\textwidth]{mw_rabi}
+    \caption[Microwave Rabi oscillation between \(\ket{1,0}\) and \(\ket{2,0}\)]{Damped Rabi oscillation between \(\ket{1,0}\) and \(\ket{2,0}\) using a microwave pulse of varying length. At longer pulse times, there is a loss of coherence due to a dephasing between the two states. The red dashed line is an envelope is a fit to a decaying exponential with a characteristic time of \(\tau = \sivalue{1016}{\micro\second}\).}
+    \label{fig:mw_rabi}
+\end{figure}
 
 \subsection{Blow-Away}\label{subsec:blow_away}
 After the atoms populate \(\ket{2,0}\), a velocity-selective Raman
@@ -552,8 +579,9 @@ After the atoms populate \(\ket{2,0}\), a velocity-selective Raman
 \(\ket{1,0}\)~\cite{Kasevich1991a}. This step is discussed in detail
 in~\SectionRef{subsec:vel_select}. The velocity-selective Raman pulse
 transfers 4\% the atoms
-back to \(\ket{1,0}\). The remaining need to be removed, otherwise
-they contribute to a large background signal. \par\noindent
+back to \(\ket{1,0}\). The atoms remaining in $\ket{F=2}$ need to be removed, otherwise
+they contribute a large background signal to the interferometer
+fringes. \par\noindent
 The final pulse during the state preparation sequence is used to push
 these non-contributing atoms out of the interferometer region. A
 single \ac{mot} beam is used so that there is a net momentum transfer
@@ -585,5 +613,5 @@ width. Aside from some residual population in \(\ket{1,\pm 1}\), the
 remaining atoms are removed using a pulse of light close to resonance
 with the \trans{2}{3} transition. This results in an ensemble of which
 around \(40\%\) of the population contributes to the interferometer
-signal.
+signal, the rest being the atoms that were left in \(\ket{1,\pm1}\).
 
